feat: introduce projects endpoint at konfidence API
add informer cache for project resources

use only one k8sClient with an informer read cache

refactor code structure

map groups to project/role hashMap in session middleware

move group from session context to session root

move business logic from http handler to data repository

add response mapping to projects endpoint
